fix news column overlaping the black line at the bottom

--- a/style.css
+++ b/style.css
@@ -1430,6 +1430,7 @@ body {
   float: left;
   margin-left:10px;
   margin-right:0px;
+  margin-bottom:4px;
   background: #f9f9f9;
 }
 
